@@ -230,12 +230,12 @@
     <li>Bash Integration - Built-in bash scripting support for custom commands, with file manager data exported as bash variables
     <li>Output Control - Monitor the stdout/stderr output of built-in and custom commands, with error detection and popup control, or run commands in a terminal
     <li>Fonts & Icons - Easily configure custom fonts and icons in each panel or pane for a unique look
-    <li>Styles - Show files as icons or in lists with customized columns
+    <li>Styles - Show files as icons or in lists with selectable columns
     <li>Find-As-You-Type - File list allows you to quickly locate a file with a case-insensitive substring search of filenames - just type a few letters
     <li>File Search - Flexibly search for file names, sizes, content, etc. with no daemons
     <li>System Management - Safely perform quick commands as root or run a root instance
     <li>File Management - Extensive move, copy, link, drag-n-drop, and clipboard control
-    <li>Archives - Single-click, built-in archive creation and extraction, or use external apps
+    <li>Archives - Single-click, in-program archive creation and extraction, or use external apps
     <li>Daemon Mode - Run in the background to automount devices and autorun apps, and quickly open browser windows
     <li>Alternate Builds - deprecated support for hal (replaces libudev) and fam/gamin (replaces inotify)
 </ul>
